--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 .DS_Store
 .idea
+raspap/vendor
+raspap/.content/cache/RainTPL4
+raspap/.content/cache/applicationCache.sqlite3
+raspap/.content/cache/phinx.yaml
+raspap/.content/cache/phpunit.xml.dist
