--- a/raspap/.content/version.yml
+++ b/raspap/.content/version.yml
@@ -1,4 +1,4 @@
-version: 2.0.33-f74b55e/test
+version: 2.0.34-ed43599
 maturity: dev
-template: 2.0.%commits-%rev.short/test
+template: 2.0.%commits-%rev.short
 fullVersionString: 2.0.32-98c0a7f-dev
