--- a/raspap/composer.json
+++ b/raspap/composer.json
@@ -10,5 +10,5 @@
         "phpunit\/phpunit": "4.7.*",
         "codeclimate\/php-test-reporter": "dev-master"
     },
-    "version": "2.0.33-f74b55e\/test"
+    "version": "2.0.34"
 }
