Added build dir to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 .idea
+raspapd/build
 raspap/.content/cache/applicationIndex.php
 raspap/.content/cache/applicationCache.sqlite3
 raspap/.content/phpunit-testing.sqlite3
